...
            "value" : "Benutzerkonto"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Account Overview"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resumen de la Cuenta"
...
            "state" : "translated",
            "value" : "Anonym användare"
          }
        }
      }
    },
    "Cancel" : {
      "comment" : "A button that dismisses the confirmation alert.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Passwort Ändern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Change Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cambiar Contraseña"
...
            "state" : "translated",
            "value" : "Byt lösenord"
          }
        }
      }
    },
    "Close" : {
      "comment" : "A label for a button that dismisses a view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar"
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Account"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar Cuenta"
...
            "state" : "translated",
            "value" : "Radera konto"
          }
        }
      }
    },
    "Done" : {
      "comment" : "A label describing the action of saving changes.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Dubbel nyckel"
          }
        }
      }
    },
    "Edit" : {
      "comment" : "A button label that indicates that the user can edit the current view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
    },
    "NAME" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
...
            "value" : "Passwort eingeben"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entre contraseña"
...
            "value" : "Passwort wiederholen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Repeat Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Escriba la contraseña otra vez"
...
            "value" : "Anmeldung & Sicherheit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign-In & Security"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio de Sesión y Seguridad"
...
            "value" : "Ein Link zum Zurücksetzen das Passworts wurde versandt."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sent out a link to reset the password."
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Se ha enviado un enlace para restablecer la contraseña."
...
            "value" : "Password vergessen?"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Forgot Password?"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "¿Olvidaste tu contraseña?"
...
            "value" : "Anmelden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign In"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Iniciar sesión"
...
            "value" : "Abmelden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar sesión"
...
            "value" : "Passwort"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contraseña"
...
            "value" : "Passwort Zurücksetzten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restablecer Contraseña"
...
            "value" : "E-Mail Adresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E-Mail Address"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dirección de Correo Electrónico"
...
