{
  "sourceLanguage" : "en",
  "strings" : {
    "Anonymous Signup" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anonym Registrieren"
          }
...
            "state" : "translated",
            "value" : "Anonymous Signup"
          }
        }
      }
    },
    "Authentication Required" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bestätigung Erforderlich"
          }
...
            "value" : "Ungültige Zugangsdaten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invalid Credentials"
          }
        }
      }
    },
    "FIREBASE_ACCOUNT_INVALID_CREDENTIALS_SUGGESTION" : {
      "localizations" : {
...
